tests/profile/error/keybinding/wrongtype_name.profile
{
  "version": { "major": 12, "minor": 13 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "name": 1.0,
      "gui_path": "T Gui-Path",
      "is_local": true,
      "script": "T script"
    }
  ]
}
